fixing text spacing

--- a/src/pages/startups/Startups.scss
+++ b/src/pages/startups/Startups.scss
@@ -459,11 +459,10 @@ $bg-active-lang: #544671;
 
 	h1 {
 		@include titleFont;
-		font-size: 30px;
 		color: $h1-title-color;
+		font-size: 30px;
 		text-align: center;
-		max-width: 510px;
-		margin: 0 auto 50px;
+		margin: 0 auto 45px;
 
 		@include tabletBig {
 			margin-bottom: 40px;
@@ -479,11 +478,12 @@ $bg-active-lang: #544671;
 		@include titleFont;
 		color: $h2-title-color;
 		font-size: 25px;
-		margin-bottom: 30px;
+		margin-bottom: 25px;
 		margin-top: 50px;
 
 		@include tabletBig {
-			font-size: 21px;
+			font-size: 22px;
+			margin-bottom: 20px;
 		}
 	}
 
@@ -496,7 +496,8 @@ $bg-active-lang: #544671;
 
 		@include tabletBig {
 			font-size: 19px;
-			margin-top: 38px;
+			margin-bottom: 20px;
+			margin-top: 40px;
 		}
 
 		+ ul {
@@ -509,12 +510,12 @@ $bg-active-lang: #544671;
 		margin-bottom: 0;
 		font-size: 15px;
 		line-height: 1.3;
-		margin-bottom: 11px;
+		margin-bottom: 10px;
 		color: $subtitle-color;
 		text-align: center;
 		letter-spacing: 0.8px;
 
-		@include mobile {
+		@include tabletBig {
 			font-size: 14px;
 		}
 	}
@@ -527,11 +528,19 @@ $bg-active-lang: #544671;
 	p + p,
 	li + li {
 		margin-top: 25px;
+
+		@include tabletBig {
+			margin-top: 20px;
+		}
 	}
 
 	// .idea-block__list
 	ul {
-		margin: 36px 0;
+		margin: 30px 0;
+
+		@include tabletBig {
+			margin: 25px 0;
+		}
 
 		li {
 			position: relative;
@@ -659,10 +668,10 @@ $bg-active-lang: #544671;
 .idea-block__action {
 	display: flex;
 	justify-content: flex-end;
-	margin-top: 55px;
+	margin-top: 52px;
 
 	@include tabletBig {
-		margin-top: 50px;
+		margin-top: 46px;
 		justify-content: center;
 	}
 }
